Fix: Images in HTML created by TinyMCE are not responsive (#7742)
* Fix: Images in HTML created by TinyMCE are not responsive
https://github.com/humhub/humhub-internal/issues/840

* Add PR ID to CHANGELOG

---------

--- a/static/scss/_bootstrap3.scss
+++ b/static/scss/_bootstrap3.scss
@@ -784,3 +784,11 @@ a.label-warning:hover {
 .colorFont5 {
     color: var(--hh-text-color-soft2) !important;
 }
+
+//
+// Fix for TinyMCE which doesn't use BS5 .img-fluid class
+// --------------------------------------------------
+
+.img-responsive {
+    @include img-fluid();
+}
